# StaticBTESolver

./: .gitignore  .gitmodules  2dm2dg-case5.slurm  404.html  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  cpu-2dm2dg-case5.slurm  cpu-compile-run.slurm  cpu-run.slurm  gpu-compile-run.slurm  gpu-run.slurm  index.html  mkdocs.yml  search.html  test.sh
about/: index.html
cmake/: FindGmsh.cmake
command-line-tool/: index.html
dependencies/: index.html
docs/: about.md  command-line-tool.md  dependencies.md  examples.md  index.md  installation.md
docs/user-guide/: command-line-tool.md  dependencies.md  examples.md  installation.md  public-api.md
examples/: index.html
html/: BTEBand_8h_source.html  BTEBoundaryCondition_8h_source.html  BTEGeometry_8h_source.html  BTEMesh_8h_source.html  StaticBTESolver_8h_source.html  annotated.html  classBTEBand-members.html  classBTEBand.html  classBTEBoundaryCondition-members.html  classBTEBoundaryCondition.html  classBTEGeometry-members.html  classBTEGeometry.html  classBTEMesh-members.html  classBTEMesh.html  classStaticBTESolver-members.html  classStaticBTESolver.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_85fc8d6a58613a42f97b812690948776.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  jquery.js  md_LICENSE.html  md_README.html  pages.html  tabs.css
html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  pages_1.js  searchdata.js
includes/StaticBTESolver/: BTEBand.h  BTEBoundaryCondition.h  BTEGeometry.h  BTEMesh.h  StaticBTESolver.h  utility.h
installation/: index.html
license/: index.html
public-api/: index.html
release-notes/: index.html
search/: search_index.json
src/: BTEBand.cpp  BTEBoundaryCondition.cpp  BTEGeometry.cpp  BTEMain.cpp  BTEMesh.cpp  CMakeLists.txt  StaticBTESolver.cpp  bicgstab.hpp  utility.cpp
tests/: CMakeLists.txt  cube.geo  segment.geo  square.geo  testBTEBand.cpp  testBTEBoundaryCondition.cpp  testBTEGeometry3D.cpp  testBTEMesh.cpp  testBTESolver2D.cpp  testBTESolver3D.cpp
tests/2DM1DG/: 2DM1DG.sol
tests/2DM2DG/: 2DM2DG.sol  mesh.mphtxt
tests/3DM1DG/: 3DM1DG.sol
tests/3DM2DG/: 3DM2DG.sol  mesh.mphtxt
tests/3DM3DG/: 3DM3DG.sol  mesh.mphtxt
tests/testcase/2Dcase1/: StaticBTESolver-2DM-1np.sol  old.sol
tests/testcase/2Dcase2/: 2D_12000.mphtxt  StaticBTESolver-2DM-1np-cpu-gmres.sol  StaticBTESolver-2DM-1np.sol  old.sol
tests/testcase/2Dcase3/: StaticBTESolver-2DM-1np.sol  old.sol
tests/testcase/2Dcase4/: StaticBTESolver-2DM-1np.sol  old.sol
tests/testcase/2Dcase5/: 2D_78000.mphtxt  StaticBTESolver-2DM-1np.sol  old.sol
tests/testcase/test_0907/: gpu-run.slurm
